# Slither_Proving

./: README.md
Slither/: .clang-tidy  .gitignore  .gitmodules  00440.pt  CMakeLists.txt  Dockerfile  README.md  autofight.sh  autosave.sgf  changeBoardSize.py  compile.sh  output4.txt  output5.txt  output6.txt  parser  parser.cpp  setup.py  test.py  test.txt
Slither/automode_save/: result_1.sgf  result_10.sgf  result_12.sgf  result_13.sgf  result_15.sgf  result_16.sgf  result_18.sgf  result_19.sgf  result_2.sgf  result_20.sgf  result_21.sgf  result_22.sgf  result_23.sgf  result_26.sgf  result_28.sgf  result_29.sgf  result_3.sgf  result_30.sgf  result_31.sgf  result_33.sgf  result_34.sgf  result_35.sgf  result_36.sgf  result_40.sgf  result_8.sgf  result_9.sgf
Slither/checkmate/: 4.txt  5.txt  checkmate_4.txt  checkmate_5.txt  checkmate_6.txt  checkmate_7.txt  checkmate_8.txt
Slither/clap/: CMakeLists.txt
Slither/cmake/: ClangFormat.cmake
Slither/config/: config.example.yaml  connect6.yaml  slither.yaml  slither5.yaml  slither9.yaml  slitherYaml.txt  surakarta.yaml  surakarta_SplitAction.yaml
Slither/mcts_sgf/: MCTS_2023Y10M31D15:59:19.sgf  MCTS_2023Y10M31D15:59:20.sgf  MCTS_2023Y10M31D15:59:21.sgf  MCTS_2023Y10M31D15:59:22.sgf  MCTS_2023Y10M31D15:59:23.sgf  MCTS_2023Y10M31D15:59:24.sgf  MCTS_2023Y10M31D15:59:25.sgf  MCTS_2023Y10M31D15:59:26.sgf  MCTS_2023Y10M31D15:59:27.sgf  MCTS_2023Y10M31D15:59:28.sgf  MCTS_2023Y10M31D15:59:29.sgf  MCTS_2023Y10M31D15:59:30.sgf  MCTS_2023Y10M31D15:59:31.sgf  MCTS_2023Y10M31D15:59:32.sgf  MCTS_2023Y10M31D15:59:33.sgf  MCTS_2023Y10M31D15:59:34.sgf  MCTS_2023Y10M31D15:59:35.sgf  MCTS_2023Y10M31D15:59:36.sgf  MCTS_2023Y10M31D15:59:37.sgf  (+876 more)
whp/: a.out  (+2 more)
(+97 files in other folders)
